<resources>
    <string name="app_name" translatable="false">Mustache</string>
    <string name="oauth_web_client_id" translatable="false">929872666692-m4djd8nb0sg81bddn77k4dndjtc3aagc.apps.googleusercontent.com</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">262994831302065</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb262994831302065</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!-- Account creation messages -->
    <string name="user_create_unknown_error_message">Unknown error creating account</string>
    <string name="user_create_fail_message">Error creating account. %s</string>
    <string name="user_create_email_sent_fail_message">Account successfully created, but not possible to sent e-mail verification. %s</string>
    <string name="user_create_email_sent_success_message">Account successfully created, check your e-mail to verify it.</string>
    <!-- Account sign in messages -->
    <string name="user_login_unknown_error_message">Unknown error signing in</string>
    <string name="user_login_fail_message">Error signing in. %s</string>
    <string name="user_login_email_not_verified_message">Before signing in, you need to verify your e-mail address. Check your e-mail to do it and try again.</string>
    <!-- Reset password messages -->
    <string name="reset_password_successfully">Instructions sent to %s to reset your password.</string>
    <!-- Other -->
    <string name="profile">User Profile</string>
    <string name="save_my_profile">Save My Profile</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="phone_number">Phone Number (optional)</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_me_up_button_text">No Account, Sign Me Up!</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="delete_account">Delete Account</string>
    <string name="barbershops">Barbershops</string>
    <string name="favorites">Favorites</string>
    <string name="my_schedule">My Schedule</string>
    <string name="search_this_area">Search This Area</string>
    <string name="reference">Reference</string>
    <string name="details">Details</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="no_favorites">You don\'t have any\nfavorite barbershop.</string>
    <string name="user_ratings_total">(%s users)</string>
    <string name="map_add_to_favorites">%s added to favorites.</string>
    <string name="map_already_on_favorites">%s is already a favorite.</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="confirmation_dialog_title">Appointment confirmation</string>
    <string name="confirmation_dialog_message">Schedule on this barbershop to %s at %s?</string>
    <string name="confirmation_scheduled_dialog_message">Appointment scheduled on %s. Once the barbershop confirms your appointment, you will be notified about it.</string>
    <string name="no_appointments">You don\'t have any appointment.</string>
    <string name="status_confirmed">Confirmed by Barbershop</string>
    <string name="status_pending">Pending Confirmation</string>
    <string name="status_canceled">Canceled by the user</string>
    <string name="cancelation_dialog_title">Cancel Appointment?</string>
    <string name="cancelation_dialog_message">Cancel this appointment on %s?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="notification_channel_id" translatable="false">confirmation_channel</string>
    <string name="notification_channel_name">Confirmations Channel</string>
    <string name="notification_channel_description">Channel that receives Barbershops\' appointments confirmation</string>
    <string name="notification_confirmation_title">Appointment confirmed!</string>
    <string name="notification_confirmation_text">%s confirmed your appointment, you can track your appointments on the My Schedule tab</string>
    <string name="app_now_in_offline_mode">App now in offline mode</string>
    <array name="barbershops_tabs_titles">
        <item>List</item>
        <item>Map</item>
    </array>
    <string name="appwidget_title">Next Appointment</string>
    <string name="no_future_appointment">No Future Appointment</string>
    <string name="forgot_password_reset_it">Forgot password? Reset it!</string>
    <string name="description_barbershop_photo">Barbershop Photo</string>
    <string name="description_mustache_logo">Mustache Logo</string>
    <string name="description_expand_icon">Expand Icon</string>
    <string name="description_user_profile_photo">User Profile Photo</string>
    <string name="description_cancel_appointment_icon">Cancel Appointment Icon</string>
    <string name="description_get_directions_icon">Get Directions Icon</string>
    <string name="description_barbershop_information_icon">Barbershop Information Icon</string>
    <string name="description_address_icon">Barbershop Address Icon</string>
    <string name="description_barbershop_phone_icon">Barbershop Phone Icon</string>
    <string name="description_barbershop_website_icon">Barbershop Website Icon</string>
    <string name="description_barbershop_hours_icon">Barbershop Hours Icon</string>
</resources>
