<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:elevation="10dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">


            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/mustache_black_background"
                android:contentDescription="@string/description_barbershop_photo" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@id/iv_photo"
                app:layout_constraintEnd_toStartOf="@+id/tv_rating"
                app:layout_constraintStart_toStartOf="@+id/iv_photo"
                tools:text="Hell's Kitchen Barbers" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:drawableEnd="@drawable/ic_star_rate_black_36"
                android:drawableTint="@color/yellow_rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/yellow_rating"
                app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
                app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                tools:text="4,8" />


            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_photo"
                tools:text="667 9th Ave, New York, NY 10036, EUA" />


            <Button
                android:id="@+id/btn_details"
                style="@style/CardViewTextButton"
                android:text="@string/details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            <Button
                android:id="@+id/btn_favorites"
                style="@style/CardViewTextButton"
                app:layout_constraintStart_toEndOf="@+id/btn_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_address"
                tools:text="@string/add_to_favorites"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>