<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/appwidget_title"
        android:drawableStart="@drawable/ic_mustache_white_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:paddingStart="8dp"
        android:text="@string/appwidget_title"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="14dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/widget_tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="FEB" />

            <TextView
                android:id="@+id/widget_tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_tv_barbershop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="14sp"
                tools:text="Hell’s Kitchen Barbershop and Tattoo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="14sp"
                    tools:text="5:30 PM" />

                <TextView
                    android:id="@+id/widget_tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/status_pending" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="22dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/widget_tv_no_appointments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_future_appointment"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

</LinearLayout>